--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,21 +24,21 @@ jobs:
     - name: Build project
       run: |
         cp config.js.template config.js
-        sed -i "s/@@API_ID@@/$API_ID/g" config.js
-        sed -i "s/@@REGION@@/$REGION/g" config.js
+        sed -i "s/@@API_ID@@/${{ secrets.API_ID }}/g" config.js
+        sed -i "s/@@REGION@@/${{ secrets.REGION }}/g" config.js
 
     - name: Commit and Push changes
+      env:
+        PAT: ${{ secrets.PAT }}
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add config.js
         git commit -m "Update config.js with API ID and region"
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}.git
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PAT }}
         publish_dir: ./
